feat: expose typed response headers
